add clear stage and delete user by id
